--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,7 +13,7 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.numesa.android.simpeldesa.ui.posts.PostsFragment"
+        android:name="com.prateek.nearwe.ui.posts.PostsFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
