Commited With Final Code

--- a/app/src/main/res/layout/activity_comments.xml
+++ b/app/src/main/res/layout/activity_comments.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#fafafa"
     android:orientation="vertical"
-    tools:context=".HomeActivity">
+    tools:context=".ui.home.HomeActivity">
 
     <ProgressBar
         android:id="@+id/progressBar"
