--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -8,6 +8,11 @@
     android:background="#fafafa"
     android:layout_height="match_parent"
     tools:context=".ui.posts.PostsFragment" >
+    <TextView
+        android:layout_centerInParent="true"
+        android:text="second"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"></TextView>
 <TextView
     android:visibility="gone"
     android:id="@+id/txtNoPost"
