--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,8 +8,13 @@
     android:background="#fafafa"
     android:layout_height="match_parent"
     tools:context=".ui.posts.PostsFragment" >
-
+<TextView
+    android:layout_centerInParent="true"
+    android:text="first"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"></TextView>
     <ProgressBar
+        android:visibility="gone"
         android:id="@+id/progressBar"
         android:layout_centerInParent="true"
         android:layout_width="wrap_content"
