--- a/app/src/main/res/layout/activity_comments.xml
+++ b/app/src/main/res/layout/activity_comments.xml
@@ -9,6 +9,7 @@
     tools:context=".ui.home.HomeActivity">
 
     <ProgressBar
+        android:visibility="gone"
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -119,12 +120,14 @@
                 android:text="@string/direct_message"
                 android:textColor="@color/Black"
                 android:textSize="@dimen/_12sdp" />
-            <LinearLayout
-                android:gravity="right"
-                android:layout_width="match_parent"
-                android:orientation="horizontal"
 
-                android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+
+                android:orientation="horizontal">
+
                 <info.androidhive.fontawesome.FontTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -134,23 +137,26 @@
 
                     android:textSize="@dimen/_18sdp"
                     app:solid_icon="true" />
+
                 <TextView
                     android:id="@+id/txtViews"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="@dimen/_5sdp"
-                    android:text="@string/direct_message"
+
                     android:textColor="@color/Black"
                     android:textSize="@dimen/_12sdp" />
+
                 <info.androidhive.fontawesome.FontTextView
                     android:id="@+id/txtLike"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/_20sdp"
                     android:text="@string/fa_heart"
                     android:textColor="@color/Gray"
                     android:textSize="@dimen/_18sdp"
-                    android:layout_marginLeft="@dimen/_20sdp"
                     app:solid_icon="true" />
+
                 <info.androidhive.fontawesome.FontTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -164,6 +170,7 @@
 
 
         </LinearLayout>
+
         <TextView
             android:id="@+id/txtLocation"
             android:layout_width="wrap_content"
@@ -182,10 +189,39 @@
         android:layout_below="@+id/lvMain"
         android:scrollbars="vertical" />
 
-<LinearLayout
-    android:background="@drawable/rounded_bg"
-    android:layout_margin="@dimen/_10sdp"
-android:layout_alignParentBottom="true"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/_40sdp"></LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_40sdp"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
+        android:layout_marginBottom="@dimen/_10sdp"
+        android:background="@drawable/rounded_bg"
+        android:gravity="center_vertical"
+        android:elevation="@dimen/_6sdp">
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/etMessage"
+            android:layout_width="0dp"
+            android:background="@null"
+            android:layout_weight="0.90"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_marginRight="@dimen/_10sdp"
+            android:hint="Respond to Post"
+            android:layout_height="match_parent"/>
+        <info.androidhive.fontawesome.FontTextView
+            android:layout_width="0dp"
+            android:id="@+id/txtSendMessage"
+            android:layout_marginRight="@dimen/_10sdp"
+            android:layout_height="wrap_content"
+
+            android:layout_weight="0.1"
+            android:text="@string/fa_paper_plane"
+            android:textColor="@color/colorPrimary"
+
+            android:textSize="@dimen/_24sdp"
+            app:solid_icon="true" />
+    </LinearLayout>
 </RelativeLayout>
