--- a/app/src/main/res/layout/recyclerview_comments_row.xml
+++ b/app/src/main/res/layout/recyclerview_comments_row.xml
@@ -3,58 +3,47 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardElevation="@dimen/_10sdp"
 
-    android:layout_margin="@dimen/_10sdp"
-    android:elevation="@dimen/_10sdp">
+    android:layout_margin="@dimen/_10sdp">
 
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_5sdp"
+        android:layout_margin="@dimen/_10sdp"
         android:orientation="vertical">
         <TextView
-            android:text="@string/name"
-            android:textStyle="bold"
+            android:id="@+id/txtComment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@android:color/black"
-            android:textSize="@dimen/_10sdp" />
-        <TextView
-            android:id="@+id/txtname"
-            android:layout_width="wrap_content"
+            android:textSize="@dimen/_13sdp" />
 
-            android:layout_height="wrap_content"
-            android:textColor="@color/colorPrimary"
-            android:textSize="@dimen/_15sdp" />
-        <TextView
-            android:layout_marginTop="@dimen/_10sdp"
-            android:text="Comment"
-            android:textStyle="bold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/_10sdp" />
+<LinearLayout
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/txtemail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/_10sdp" />
-        <TextView
-           android:layout_marginTop="@dimen/_10sdp"
-            android:text="PostId"
-            android:textStyle="bold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/_10sdp" />
-        <TextView
-            android:id="@+id/txtBody"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/_10sdp" />
+    <TextView
+        android:id="@+id/txtname"
+        android:layout_width="wrap_content"
+android:text="asas"
+        android:layout_height="wrap_content"
+        android:textColor="@color/Gray"
+        android:textSize="@dimen/_10sdp"  />
+
+    <TextView
+        android:layout_marginLeft="@dimen/_5sdp"
+        android:text="asas"
+        android:id="@+id/txtTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/Gray"
+        android:textSize="@dimen/_10sdp" />
+</LinearLayout>
+
 
     </LinearLayout>
 
