--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
@@ -66,16 +67,72 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginRight="@dimen/_15sdp"
-            android:layout_marginBottom="@dimen/_50sdp"
             android:contentDescription="test"
+            android:visibility="gone"
             app:backgroundTint="@color/colorPrimaryDark"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+
             app:srcCompat="@drawable/ic_baseline_add_24"
             app:tint="@android:color/white" />
+
+        <com.nambimobile.widgets.efab.ExpandableFabLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="@dimen/_50sdp">
+
+            <!-- The next 3 Views will only display in portrait orientation -->
+            <com.nambimobile.widgets.efab.Overlay
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:overlay_color="#cc000000"
+                app:overlay_orientation="portrait" />
+
+            <com.nambimobile.widgets.efab.ExpandableFab
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_marginEnd="@dimen/_10sdp"
+                android:layout_marginRight="@dimen/_10sdp"
+
+                android:layout_marginBottom="@dimen/_10sdp"
+                app:efab_color="@color/colorPrimary"
+                app:efab_icon="@drawable/ic_baseline_add_24"
+                app:efab_iconAnimationRotationDeg="0"
+                app:efab_orientation="portrait" />
+
+            <com.nambimobile.widgets.efab.FabOption
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="add_whats_new_click"
+                app:fab_color="@color/colorPrimary"
+                app:fab_icon="@drawable/ic_baseline_whtat_is_24"
+                app:fab_orientation="portrait"
+                app:label_text="Ask a Question" />
+
+            <com.nambimobile.widgets.efab.FabOption
+                android:layout_width="wrap_content"
+
+                android:layout_height="wrap_content"
+                android:onClick="add_new_post_click"
+                app:fab_color="@color/colorPrimary"
+                app:fab_icon="@drawable/ic_baseline_settings_neame_24"
+                app:fab_orientation="portrait"
+                app:label_text="NearBy Post" />
+
+            <com.nambimobile.widgets.efab.FabOption
+                android:layout_width="wrap_content"
+
+                android:layout_height="wrap_content"
+                android:onClick="add_Interest_Hobiles_post_click"
+                app:fab_color="@color/colorPrimary"
+                app:fab_icon="@drawable/ic_baseline_trending_24"
+                app:fab_orientation="portrait"
+                app:label_text="Interest and Hobbies" />
+
+
+        </com.nambimobile.widgets.efab.ExpandableFabLayout>
 
     </RelativeLayout>
 
