--- a/app/src/main/res/layout/recyclerview_posts_row.xml
+++ b/app/src/main/res/layout/recyclerview_posts_row.xml
@@ -63,6 +63,10 @@
                 android:textColor="@android:color/black"
                 android:textSize="@dimen/_14sdp" />
         </LinearLayout>
+        <ImageView
+            android:id="@+id/imgPost"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_67sdp"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
