--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,6 +19,21 @@
     </style>
 
 
+    <style name="TransparentDialog" parent="Theme.Design.Light.BottomSheetDialog">
+        <item name="android:windowCloseOnTouchOutside">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:colorBackground">     @android:color/transparent</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:backgroundDimAmount">0.3</item>
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+    </style>
 
+    <style name="TagChip" parent="Widget.MaterialComponents.Chip.Filter">
+        <item name="android:elevation">4dp</item>
+        <item name="chipBackgroundColor">@color/chips_bg</item>
+        <item name="checkedIconTint">@color/White</item>
 
+    </style>
 </resources>
