Commited With Final Code

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -133,7 +133,13 @@
 
 
         </com.nambimobile.widgets.efab.ExpandableFabLayout>
+        <ProgressBar
 
+            android:visibility="gone"
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true" />
     </RelativeLayout>
 
     <com.google.android.material.navigation.NavigationView
