--- a/app/src/main/res/layout/add_postbottomsheet.xml
+++ b/app/src/main/res/layout/add_postbottomsheet.xml
@@ -24,6 +24,7 @@
             android:textSize="@dimen/_15sdp" />
 
         <EditText
+            android:id="@+id/etTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_15sdp"
