--- a/app/src/main/res/layout/fragment_trending.xml
+++ b/app/src/main/res/layout/fragment_trending.xml
@@ -45,6 +45,7 @@
 
     <ProgressBar
 
+        android:visibility="gone"
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
