--- a/app/src/main/res/layout/recyclerview_posts_row.xml
+++ b/app/src/main/res/layout/recyclerview_posts_row.xml
@@ -65,6 +65,7 @@
         </LinearLayout>
         <ImageView
             android:id="@+id/imgPost"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_67sdp"/>
         <LinearLayout
