--- a/app/src/main/res/layout/add_postbottomsheet.xml
+++ b/app/src/main/res/layout/add_postbottomsheet.xml
@@ -19,73 +19,63 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_10sdp"
             android:textColor="@color/Black"
             android:textSize="@dimen/_15sdp" />
 
-        <EditText
+
+        <EditText android:layout_margin="@dimen/_10sdp"
             android:id="@+id/etTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_15sdp"
+
             android:hint="Add Post Description Here" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/imgUploadButton"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            android:textAllCaps="false"
+            app:backgroundTint="@color/colorPrimary"
+            style="@style/Widget.MaterialComponents.Button.Icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Uplaod Image"
+            app:icon="@drawable/ic_round_perm_media_24"
+            app:iconGravity="textStart"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+
+            android:text="Add Upto 5 Tags"
+            android:textColor="@color/Black"
+            android:textSize="@dimen/_15sdp"
+            android:textStyle="bold" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recylerSubCategories"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_200sdp" />
+            android:layout_height="@dimen/_150sdp" />
 
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/chipGroup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:visibility="gone">
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip1"
-                style="@style/TagChip"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="false"
-
-                android:text="Games"
-                android:textColor="@color/White" />
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip2"
-
-                style="@style/TagChip"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Movies"
-                android:textColor="@color/White" />
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip3"
-                style="@style/TagChip"
-                android:layout_width="wrap_content"
-
-                android:layout_height="wrap_content"
-                android:text="Travel"
-                android:textColor="@color/White" />
-
-        </com.google.android.material.chip.ChipGroup>
 
         <RadioGroup
             android:id="@+id/radioGroup1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_15sdp"
+            android:layout_marginLeft="@dimen/_15sdp"
+            android:layout_marginRight="@dimen/_15sdp"
             android:background="#024CAF50">
 
             <RadioButton
-                android:checked="true"
                 android:id="@+id/postRadioOne"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
                 android:buttonTint="@color/Green"
+
+                android:checked="true"
                 android:paddingLeft="@dimen/_10sdp"
                 android:text="@string/green_general_queried_in_your_area"
                 android:textSize="@dimen/_12sdp" />
@@ -120,7 +110,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="@dimen/_20sdp"
+android:layout_margin="@dimen/_15sdp"
             android:text="@string/post_anonymously"
             android:textColor="@color/Red"
             android:textSize="@dimen/_12sdp" />
