--- a/app/src/main/res/layout/fragment_trending.xml
+++ b/app/src/main/res/layout/fragment_trending.xml
@@ -17,11 +17,11 @@
 
         android:scrollbars="vertical" />
 
-    <ProgressBar
-
-        android:visibility="gone"
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:layout_width="match_parent"
         android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true" />
+        android:visibility="gone"
+        android:layout_alignParentTop="true"
+        android:indeterminate="true"
+        android:layout_height="wrap_content" />
 </RelativeLayout>
