--- a/app/src/main/res/layout/fragment_whatis.xml
+++ b/app/src/main/res/layout/fragment_whatis.xml
@@ -13,10 +13,11 @@
         android:layout_height="match_parent"
         android:scrollbars="vertical" />
 
-    <ProgressBar
-
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:layout_width="match_parent"
         android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true" />
+        android:visibility="gone"
+        android:layout_alignParentTop="true"
+        android:indeterminate="true"
+        android:layout_height="wrap_content" />
 </RelativeLayout>
