--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,4 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+  ~ Created by Efendi Hariyadi on 28/06/22, 10:06 PM
+  ~ Copyright (c) 2022 . All rights reserved.
+  ~ Last modified 28/06/22, 5:03 PM
+  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
@@ -20,6 +25,7 @@
         tools:openDrawer="end">
 
         <RelativeLayout
+            android:background="@color/White"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -48,20 +54,70 @@
 
             </com.google.android.material.appbar.AppBarLayout>
 
-            <TextView
-                android:id="@+id/txtHeader"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <androidx.cardview.widget.CardView
                 android:layout_below="@+id/appBar"
-                android:layout_centerHorizontal="true"
-                android:layout_marginLeft="@dimen/_16sdp"
-                android:layout_marginTop="@dimen/_16sdp"
-                android:layout_marginRight="@dimen/_16sdp"
-                android:ellipsize="end"
-                android:maxLines="2"
-                android:text="@{ loginViewModel.addressDetails }"
-                android:textColor="@android:color/black"
-                android:textSize="@dimen/_16sdp" />
+                android:id="@+id/cardLocation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/_10sdp"
+                app:cardBackgroundColor="@color/colorPrimary"
+                app:cardCornerRadius="@dimen/_15sdp"
+                app:cardElevation="@dimen/_10sdp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="@dimen/_5sdp"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:tint="@color/primarytext"
+                            android:layout_width="@dimen/_30sdp"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="@dimen/_10sdp"
+                            android:src="@drawable/ic_locationbg" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_marginTop="@dimen/_5sdp"
+                            android:layout_width="match_parent"
+
+                            android:layout_height="wrap_content"
+                            android:text="Current Location"
+                            android:textColor="@color/White"
+                            android:textSize="@dimen/_14sdp" />
+
+                        <TextView
+                            android:layout_marginBottom="@dimen/_5sdp"
+                            android:id="@+id/txtHeader"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+android:minLines="2"
+                            android:layout_centerHorizontal="true"
+
+
+                            android:layout_marginRight="@dimen/_16sdp"
+                            android:ellipsize="end"
+                            android:maxLines="2"
+                            android:text="@{ loginViewModel.addressDetails }"
+                            android:textColor="@color/primarytext"
+                            android:textSize="@dimen/_12sdp" />
+                    </LinearLayout>
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
 
             <fragment
                 android:id="@+id/activity_main_nav_host_fragment"
@@ -69,13 +125,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_above="@+id/bottomNavigationView"
-                android:layout_below="@+id/txtHeader"
+                android:layout_below="@+id/cardLocation"
                 android:layout_weight="1"
                 app:defaultNavHost="true"
                 app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/appBar"
+                app:layout_constraintTop_toBottomOf="@+id/cardLocation"
                 app:navGraph="@navigation/nav_graph" />
 
             <ProgressBar
