--- a/app/src/main/res/layout/fragment_posts.xml
+++ b/app/src/main/res/layout/fragment_posts.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+  ~ Created by Efendi Hariyadi on 28/06/22, 11:01 PM
+  ~ Copyright (c) 2022 . All rights reserved.
+  ~ Last modified 28/06/22, 5:03 PM
+  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    android:background="#fafafa"
+    android:background="#F1F1F1"
     tools:context=".ui.posts.PostsFragment">
 
 
@@ -16,12 +22,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
-        android:scrollbars="vertical" />
+        android:scrollbars="none" />
 
     <com.google.android.material.progressindicator.LinearProgressIndicator
         android:layout_width="match_parent"
         android:id="@+id/progressBar"
         android:visibility="gone"
+        android:progressTint="@color/colorAccent"
         android:layout_alignParentTop="true"
         android:indeterminate="true"
         android:layout_height="wrap_content" />
