--- a/app/src/main/res/layout/recyclerview_posts_row.xml
+++ b/app/src/main/res/layout/recyclerview_posts_row.xml
@@ -1,19 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+  ~ Created by Efendi Hariyadi on 28/06/22, 10:44 PM
+  ~ Copyright (c) 2022 . All rights reserved.
+  ~ Last modified 28/06/22, 5:03 PM
+  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-
+app:cardCornerRadius="@dimen/_15sdp"
     android:layout_height="wrap_content"
 
-    android:layout_margin="@dimen/_10sdp"
-    android:elevation="@dimen/_10sdp">
+    android:layout_margin="@dimen/_5sdp"
+    app:elevation="@dimen/_10sdp">
 
     <LinearLayout
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginLeft="@dimen/_10sdp"
+        android:layout_marginRight="@dimen/_10sdp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_10sdp"
+
         android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imgpostType"
+            android:layout_width="@dimen/_13sdp"
+            android:layout_height="@dimen/_13sdp"
+            android:layout_gravity="right"
+            android:src="@drawable/roundicon"
+            app:tint="@android:color/holo_orange_dark" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -22,58 +40,151 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imgpostType"
-                android:layout_width="@dimen/_10sdp"
-                android:layout_height="@dimen/_10sdp"
-                android:src="@drawable/roundicon"
-                app:tint="@android:color/holo_orange_dark" />
+                android:layout_width="@dimen/_40sdp"
+                android:layout_height="@dimen/_40sdp"
+                android:src="@drawable/ic_user" />
+
+            <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:text="Posted By: "
+
+                android:textColor="@color/Black"
+                android:textSize="@dimen/_12sdp" />
 
             <TextView
                 android:id="@+id/txtName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_5sdp"
-
-                android:textColor="@android:color/darker_gray"
-                android:textSize="@dimen/_10sdp" />
-
+android:capitalize="words"
+                android:textColor="@color/Black"
+                android:textSize="@dimen/_12sdp"
+                android:textStyle="bold" />
             <TextView
+                android:text="sqssss"
+                android:gravity="right"
                 android:id="@+id/txtDateTime"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_5sdp"
 
-                android:textColor="@android:color/darker_gray"
+                android:textColor="@color/Black"
                 android:textSize="@dimen/_10sdp" />
+
+
+
         </LinearLayout>
 
-        <LinearLayout
+        <TextView
+            android:layout_marginTop="@dimen/_5sdp"
+            android:id="@+id/txtTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/_5sdp"
+
+            android:textColor="@color/Black"
+            android:textSize="@dimen/_12sdp" />
+        <ImageView
+            android:layout_marginTop="@dimen/_5sdp"
+            android:id="@+id/imgPost"
+            android:scaleType="fitXY"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_150sdp"
+            android:visibility="gone" />
+
+        <RelativeLayout
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginBottom="@dimen/_10sdp"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/txtTitle"
+            android:orientation="horizontal">
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <info.androidhive.fontawesome.FontTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/_10sdp"
+                    android:text="@string/fa_eye"
+                    android:textColor="@color/DarkOrange"
+
+                    android:textSize="@dimen/_18sdp"
+                    app:solid_icon="true" />
+
+                <TextView
+                    android:id="@+id/txtViews"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="@dimen/_5sdp"
+
+                    android:textColor="@color/Black"
+                    android:textSize="@dimen/_12sdp" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_5sdp"
+                android:layout_centerHorizontal="true"
+                android:orientation="horizontal">
 
-                android:textColor="@android:color/black"
-                android:textSize="@dimen/_14sdp" />
-        </LinearLayout>
+                <info.androidhive.fontawesome.FontTextView
+                    android:id="@+id/txtLike"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
 
-        <ImageView
-            android:id="@+id/imgPost"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_67sdp"
-            android:visibility="gone" />
+                    android:text="@string/fa_comments_solid"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="@dimen/_18sdp"
+                    app:solid_icon="true" />
+
+                <TextView
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="@dimen/_5sdp"
+                    android:text="Reply"
+                    android:textColor="@color/Black"
+                    android:textSize="@dimen/_12sdp" />
+            </LinearLayout>
+
+
+          <LinearLayout
+              android:layout_alignParentRight="true"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content">
+              <info.androidhive.fontawesome.FontTextView
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+
+
+                  android:text="@string/fa_share_alt_solid"
+                  android:textColor="@color/DarkGreen"
+
+                  android:textSize="@dimen/_18sdp"
+                  app:solid_icon="true" />
+              <TextView
+
+                  android:layout_width="wrap_content"
+                  android:layout_height="match_parent"
+                  android:layout_marginLeft="@dimen/_5sdp"
+                  android:text="Share"
+                  android:textColor="@color/Black"
+                  android:textSize="@dimen/_12sdp" />
+          </LinearLayout>
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
 
             <TextView
@@ -81,18 +192,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_5sdp"
-
-                android:textColor="@android:color/darker_gray"
-                android:textSize="@dimen/_10sdp" />
+                android:textStyle="bold"
+android:text="Featured Tags"
+                android:textColor="@color/Black"
+                android:textSize="@dimen/_12sdp" />
 
             <LinearLayout
-                android:padding="@dimen/_10sdp"
                 android:id="@+id/lvSubCategory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_10sdp"
+
                 android:orientation="horizontal"
- />
+                android:padding="@dimen/_10sdp" />
         </LinearLayout>
     </LinearLayout>
 
